fix: Header > Horizontal scroll issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,7 @@ header {
   background-position: center;
   background-attachment: fixed;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 header .banner {
